// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About display About page based on config and status 1`] = `
<div>
  <h5
    aria-label="breadcrumb"
    class=""
  >
    <ol
      class="breadcrumb"
    >
      <a
        class="oi-breadcrumb breadcrumb-item"
        href="/"
      >
        Home
      </a>
      <span
        aria-current="page"
        class="active breadcrumb-item"
      >
        About
      </span>
    </ol>
  </h5>
  <div
    class="row"
  >
    <div
      class="container-fluid"
    >
      <ul
        class="list-group"
      >
        <a
          class="list-group-item"
          href="https://optimistik.io/oibus"
        >
          <img
            alt="logo"
            height="100px"
            src=""
          />
        </a>
        <li
          class="list-group-item"
        >
          Version:
        </li>
        <a
          class="list-group-item"
          href="https://optimistik.io/oibus"
        >
          Official site
        </a>
        <li
          class="list-group-item"
        >
          Copyright:
        </li>
        <a
          class="list-group-item"
          href="https://joinup.ec.europa.eu/sites/default/files/custom-page/attachment/2020-03/EUPL-1.2%20EN.txt"
        >
          Licensed under the EUPL-1.2-or-later
        </a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`About display About page based on config and status 2`] = `
<div>
  <h5
    aria-label="breadcrumb"
    class=""
  >
    <ol
      class="breadcrumb"
    >
      <a
        class="oi-breadcrumb breadcrumb-item"
        href="/"
      >
        Home
      </a>
      <span
        aria-current="page"
        class="active breadcrumb-item"
      >
        About
      </span>
    </ol>
  </h5>
  <div
    class="row"
  >
    <div
      class="container-fluid"
    >
      <ul
        class="list-group"
      >
        <a
          class="list-group-item"
          href="https://optimistik.io/oibus"
        >
          <img
            alt="logo"
            height="100px"
            src=""
          />
        </a>
        <li
          class="list-group-item"
        >
          Version:
          0.5.7-dev
        </li>
        <a
          class="list-group-item"
          href="https://optimistik.io/oibus"
        >
          Official site
        </a>
        <li
          class="list-group-item"
        >
          Copyright:
          (c) Copyright 2019 Optimistik, all rights reserved.
        </li>
        <a
          class="list-group-item"
          href="https://joinup.ec.europa.eu/sites/default/files/custom-page/attachment/2020-03/EUPL-1.2%20EN.txt"
        >
          Licensed under the EUPL-1.2-or-later
        </a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`About display About with config null 1`] = `
<div>
  <h5
    aria-label="breadcrumb"
    class=""
  >
    <ol
      class="breadcrumb"
    >
      <a
        class="oi-breadcrumb breadcrumb-item"
        href="/"
      >
        Home
      </a>
      <span
        aria-current="page"
        class="active breadcrumb-item"
      >
        About
      </span>
    </ol>
  </h5>
  <div
    class="row"
  >
    <div
      class="container-fluid"
    >
      <ul
        class="list-group"
      >
        <a
          class="list-group-item"
          href="https://optimistik.io/oibus"
        >
          <img
            alt="logo"
            height="100px"
            src=""
          />
        </a>
        <li
          class="list-group-item"
        >
          Version:
        </li>
        <a
          class="list-group-item"
          href="https://optimistik.io/oibus"
        >
          Official site
        </a>
        <li
          class="list-group-item"
        >
          Copyright:
        </li>
        <a
          class="list-group-item"
          href="https://joinup.ec.europa.eu/sites/default/files/custom-page/attachment/2020-03/EUPL-1.2%20EN.txt"
        >
          Licensed under the EUPL-1.2-or-later
        </a>
      </ul>
    </div>
  </div>
</div>
`;
